add input and button

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
   <h1>Guess the Number Here!</h1>
+  <div>
+    <p>
+      <input placeholder="Enter Guess" type="guess"> 
+      <button>Submit</button>
+    </p>
+  </div>
 </body>
 </html>
