change html to resemble a winning screen

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <title>Guess the Number</title>
 </head>
 <body>
-  <h1>Guess the Number Here!</h1>
+  <h1>Congradulations!</h1>
   <div>
     <p>
-      <input placeholder="Enter Guess" type="guess"> 
-      <button>Submit</button>
+      You won guess the number! </br>
+      Reload the page to play again.
     </p>
   </div>
 </body>
